Resolvendo alguns conflitos, paginacao, lightbox, breadcrumb, entre outros

--- a/commom/css/estilo.css
+++ b/commom/css/estilo.css
@@ -352,6 +352,11 @@ a:focus{
 /* ------------- Site ------------- */
 
 /* topo */
+
+.container-fluid{
+    min-width: 340px;
+}
+
 .pd-none{
     padding: 0px;
 }
@@ -598,7 +603,9 @@ a:focus{
 .breadcrumb{
     margin-bottom: 0px;
     background: #f4f3ee;   
-    padding: 8px 0px;
+    padding: 18px 0px;
+    position: relative;
+    margin-top: -19px;
 }
 
 .breadcrumb>li+li:before{
@@ -651,6 +658,7 @@ a:focus{
 .produto-home{
     padding: 7px 7px;
     max-width: 276px;
+    min-height: 350px;
 }
 
 .bloco-produtos-destaque{
@@ -825,7 +833,7 @@ a:focus{
 }
 
 .bloco-contato-fale{
-    padding-top: 60px;
+    padding-top: 90px;
 }
 
 .bloco-contato-fale .titulo-rodape{
@@ -853,6 +861,33 @@ a:focus{
 
 .pd-top-30{
     padding-top: 30px;
+}
+
+.encapsula-breadcrumb{
+    max-width: 1088px; 
+    width: 100%;
+    display: table; 
+    margin: auto;
+    list-style: none;
+    padding: 0px 20px;
+}
+
+.encapsula-breadcrumb li{
+    float: left;
+    padding-right: 7px;
+    font-family: 'DroidSans';
+    font-size: 0.8em;
+    text-transform: uppercase;
+}
+
+.encapsula-breadcrumb a{
+    font-family: 'DroidSans';
+    color: #404041 !important;
+}
+
+.encapsula-breadcrumb .active{
+    color: #404041;
+    font-weight: bold;
 }
 /*
 * Internas
@@ -1154,6 +1189,76 @@ iframe{
 * Rodape
 */
 
+/*
+* LightBox
+*/
+.mtlsr-images-for-lightbox{max-width:600px;margin:0 auto;overflow:hidden}
+/*.mtlsr-images-for-lightbox ul li{float:left;display:inline;width:14%;margin:1%;padding:2%;background-color:#fff;border-top:2px solid #598dca}*/
+/*.mtlsr-images-for-lightbox ul li a img{width:100%;height:auto;}*/
+
+.mtlsr-lightbox{            
+    /* IE9 SVG, needs conditional override of 'filter' to 'none' */
+    background: -moz-linear-gradient(left,  rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.7) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0.7)), color-stop(100%,rgba(0,0,0,0.7))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left,  rgba(0,0,0,0.7) 0%,rgba(0,0,0,0.7) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left,  rgba(0,0,0,0.7) 0%,rgba(0,0,0,0.7) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left,  rgba(0,0,0,0.7) 0%,rgba(0,0,0,0.7) 100%); /* IE10+ */
+    background: linear-gradient(to right,  rgba(0,0,0,0.7) 0%,rgba(0,0,0,0.7) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3000000', endColorstr='#b3000000',GradientType=1 ); /* IE6-8 */
+}
+.mtlsr-lightbox .image-in-lightbox{
+    border-radius:5px
+}
+
+.close, .next, .prev{
+    color:#666;
+    font-size:30px;
+    text-decoration:none; 
+    position:absolute;
+    z-index:9999;
+}
+
+.next, .prev{
+    color:#aaa;
+    font-size:80px; 
+    top:50%;
+}
+
+.close:hover, .next:hover, .prev:hover{color:#fff;}
+
+.mtlsr-lightbox{
+    display:none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    top: 0;
+    left: 0px;
+}
+
+.mtlsr-lightbox .image-in-lightbox{
+    max-width: 40%;
+    width: 100%;
+    position: absolute;
+    z-index: 999;
+    top: 10%;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+}
+
+.close{
+    position:absolute;
+    right:20px;
+    top:20px;
+}
+
+.next{right:20px;}
+
+.prev{left:20px;}
+
+
 @media all and (max-width: 767px){
     .navbar-brand{
         display: block;
@@ -1178,6 +1283,7 @@ iframe{
         /*margin-left: -15px;*/
         border-bottom: 2px solid #ccc;
         border-top: 2px solid #ccc;
+        padding-top: 120px;
     }
 
     .bloco-tel-topo{
@@ -1289,6 +1395,22 @@ iframe{
     .txt-destaque-pag-index{
         width: 100%;
     }
+
+    .navbar-default{
+        position: fixed;
+        width: 100%;
+        z-index: 9999;
+    }
+
+    .bloco-encapsula-marcas{
+        width: 70%;
+        display: block;
+        margin: auto;
+    }
+
+    .breadcrumb{
+        margin-top: 0px;
+    }
 }
 
 @media all and (min-width: 768px){
@@ -1333,5 +1455,13 @@ iframe{
     
     .txt-destaque-pag-index{
         width: 60%;
+    }
+
+}
+
+@media all and (max-width: 400px){
+    .link-contato-topo {
+        margin-top: 2px;
+        font-size: 1.1em;
     }
 }
