--- a/commom/templates/calhas.html
+++ b/commom/templates/calhas.html
@@ -24,6 +24,7 @@
             <img class="img-banner-interna" src="commom/img/banner-produto.jpg" alt="calhas automotivas" title="calhas automotivas">
             <h1 class="titulo-interna">calhas automotivas</h1>
         </div>
+        {include file="inc/bradcrumb.html"}
         <section class="conteudo">
             <div class="row">
                 <div class="col-xs-12 col-sm-3 col-md-3">
