--- a/commom/templates/index.html
+++ b/commom/templates/index.html
@@ -84,7 +84,7 @@
                 </div>
                 <p class="txt-destaque-pag no-border-top">Trabalhamos com as mais diversas marcas.</p>
             </div>
-            <div class="row">
+            <div class="row bloco-encapsula-marcas">
                 <img src="commom/img/audi.png" alt="audi" title="audi" class="img-marca">
                 <img src="commom/img/bmw.png" alt="bmw" title="bmw" class="img-marca">
                 <img src="commom/img/chery.png" alt="chery" title="chery" class="img-marca">
