--- a/commom/templates/quem-somos.html
+++ b/commom/templates/quem-somos.html
@@ -24,6 +24,7 @@
             <img class="img-banner-interna" src="commom/img/banner-quem-somos.jpg" alt="quem somos" title="quem somos">
             <h2 class="titulo-interna">quem somos</h2>
         </div>
+        {include file="inc/bradcrumb.html"}
         <section class="conteudo">
             <div class="row">
                 <div class="col-xs-12 col-sm-7 col-md-7">
@@ -34,7 +35,8 @@
                     <p class="txt-interna">Oferecemos serviços de qualidade atendendo aos nossos clientes com perfeição e comercializar produtos de qualidade nos comprometendo com a satisfação do cliente.</p><br>
                 </div>  
                 <div class="col-xs-12 col-sm-5 col-md-5">  
-                    <img class="img-responsive" src="commom/img/empresa.jpg" alt="empresa" title="empresa">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3653.4189813192834!2d-46.61176578501967!3d-23.696727484615845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce446132a2c075%3A0x6f9c2f8eacaa7f72!2sR.+%C3%81lvares+Cabral%2C+477+-+Concei%C3%A7%C3%A3o%2C+Diadema+-+SP%2C+09981-030!5e0!3m2!1spt-BR!2sbr!4v1445620710856" allowfullscreen style="max-width: 100%;"></iframe><br><br>
+                    <p class="txt-interna">Rua Álvares Cabral 477 - Vila Conceição - Diadema - SP - CEP: 09981-030</p>
                 </div>
             </div>
         </section>
