--- a/commom/templates/calha.html
+++ b/commom/templates/calha.html
@@ -10,6 +10,8 @@
     <link href="commom/img/icon-tab.png" rel="icon">
     <link href="commom/css/bootstrap.min.css" rel="stylesheet">
     <link href="commom/css/estilo.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="commom/js/lightbox.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -24,6 +26,7 @@
             <img class="img-banner-interna" src="commom/img/banner-produto.jpg" alt="calhas automotivas" title="calhas automotivas">
             <h2 class="titulo-interna">calhas automotivas</h2>
         </div>
+        {include file="inc/bradcrumb.html"}
         <section class="conteudo">
             <div class="row">
                 <div class="col-xs-12 col-sm-3 col-md-3">
@@ -34,7 +37,17 @@
                         <div class="col-xs-12 col-sm-4 col-md-4 pd-none produto-detalhe">
                             <!-- <img src="commom/img/produto.jpg" title="Produto" alt="Produto"> -->
                             {if $dados[0].caminhoImagem}
-                                <img src="{$dados[0].caminhoImagem}" title="{$dados[0].descricao}" alt="{$dados[0].descricao}">
+                                <div class="mtlsr-images-for-lightbox">
+                                    <ul>
+                                        <li>
+                                            <a href="{$dados[0].caminhoImagem}"></a>
+                                            <img src="{$dados[0].caminhoImagem}" title="{$dados[0].descricao}" alt="{$dados[0].descricao}">
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="mtlsr-lightbox">
+                                    <a href="#" class="close">&#9421;</a>
+                                </div>
                             {else}
                                 <img src="commom/img/sem-foto.jpg" title="{$dados[0].descricao}" alt="{$dados[0].descricao}">
                             {/if}
@@ -66,7 +79,7 @@
                                 <div class="row bloco-desc-ind">
                                     <img class="icon-desc-produto pull-left" src="commom/img/icon-marca.png" alt="icone" title="icone">
                                     <p class="txt-detalhe-produto"><strong>Marca</strong></p>
-                                    <p class="txt-detalhe-produto"><img class="icon-img-desc" src="{$dados[0].imgMarca}" alt="{$dados[0].nmModelo}" title="{$dados[0].nmModelo}"></p>
+                                    <p class="txt-detalhe-produto"><img class="icon-img-desc" src="{$dados[0].imgMarca}" alt="{$dados[0].tituloMarca}" title="{$dados[0].tituloMarca}"></p>
                                 </div>  
                                 <div class="row bloco-desc-ind">
                                     <img class="icon-desc-produto pull-left" src="commom/img/icon-material.png" alt="icone" title="icone">
