--- a/commom/templates/fale-conosco.html
+++ b/commom/templates/fale-conosco.html
@@ -24,6 +24,7 @@
             <img class="img-banner-interna" src="commom/img/banner-fale-conosco.jpg" alt="fale conosco" title="fale conosco">
             <h2 class="titulo-interna">fale conosco</h2>
         </div>
+        {include file="inc/bradcrumb.html"}
         <section class="conteudo">
             <div class="row">
                 <div class="col-xs-12 col-sm-8 col-md-8">
@@ -35,7 +36,7 @@
                     <div class="encapsula-contato-fale">
                         <p class="titulo-rodape">Atendimento:</p>
                         <ul>
-                            <li class="linha-rodape"><a class="link-rodape" href="tel:1100000000 ">(11) 0000-0000</a></li>
+                            <li class="linha-rodape"><a class="link-rodape" href="tel:01140430356">(11) 40430356</a></li>
                             <li class="linha-rodape"><a class="link-rodape" href="mailto:contato@ecoflexautomotive.com.br">contato@ecoflexautomotive.com.br</a></li>
                             <li class="linha-rodape">Seg a Sáb das 9:00 às 18:30hs.</li>
                         </ul>
@@ -44,9 +45,9 @@
                     <div class="encapsula-contato-fale">
                         <p class="titulo-rodape">Localização:</p>
                         <ul>
-                            <li class="linha-rodape">Rua Nononon nnono, 4487</li>
-                            <li class="linha-rodape">Nome Bairro - São Paulo - SP</li>
-                            <li class="linha-rodape">CEP:00000-000</li>
+                            <li class="linha-rodape">Rua Álvares Cabral 477</li>
+                            <li class="linha-rodape">Vila Conceição - Diadema - SP</li>
+                            <li class="linha-rodape">CEP: 09981-030</li>
                         </ul>
                     </div>
                 </div>
