--- a/commom/templates/inc/form.html
+++ b/commom/templates/inc/form.html
@@ -20,6 +20,20 @@
         </div>
     </div>
     <div class="form-group">
+        <label for="como" class="col-sm-2 control-label">Onde nos encontrou*</label>
+         <div class="col-sm-10">
+            <select class="form-control" id="como" name="como">
+                <option>*Como nos conheceu?</option>
+                <option>Google</option>
+                <option>Facebook</option>
+                <option>Folheto</option>
+                <option>Indicação</option>
+                <option>E-mail marketing</option>
+                <option>Outros...</option>
+            </select>
+        </div>
+    </div>
+    <div class="form-group">
         <label for="msg" class="col-sm-2 control-label">Mensagem*</label>
         <div class="col-sm-10">
             <textarea class="form-control campo-msg" name="msg" id="msg"></textarea>
