--- a/commom/templates/inc/header.html
+++ b/commom/templates/inc/header.html
@@ -15,7 +15,7 @@
 	            </div>
 	            <div class="col-xs-12 search-mobile">
 			    	<form class="form-search" action="calhas.php" method="get" name="search">
-			    		<input class="busca" type="search" name="busca" value="{$postBusca}" placeholder="Pesquisar...">
+			    		<input class="busca" type="search" name="busca" value="{$postBusca}" placeholder="Digite o modelo...">
 			    		<input class="buscar" type="submit" value="">
 			    	</form>
 			    </div>
@@ -41,7 +41,7 @@
 			                    {/section}
 			                </ul>
 		                </li>   -->
-		                <li class="linha-menu visible-xs-block"><a class="link-menu {if $pagina == 'onde-comprar.php'} link-menu-ativo {/if}" href="#">Onde comprar</a></li>
+		                <!-- <li class="linha-menu visible-xs-block"><a class="link-menu {if $pagina == 'onde-comprar.php'} link-menu-ativo {/if}" href="#">Onde comprar</a></li> -->
 	              	</ul>
 	            </div>
 	        </div>
@@ -54,7 +54,7 @@
 		<div class="encapsula-contato-topo pd-none">
 	    	<div class="col-xs-12 col-sm-2 col-md-2 bloco-tel-topo pd-none">
 				<img class="icon-contato-topo" src="commom/img/icon-tel.png" alt="Icone telefone" title="Icone telefone">
-				<a href="tel:11988643325" class="link-contato-topo" title="11  0000-0000">11  0000-0000</a>
+				<a href="tel:01140430356" class="link-contato-topo" title="11  40430356">11  40430356</a>
 	    	</div> 
 	    	<div class="col-xs-12 col-sm-3 col-md-3 bloco-email-topo pd-none">
 				<img class="icon-contato-topo" src="commom/img/icon-email.png" alt="Icone telefone" title="Icone telefone">
@@ -91,7 +91,7 @@
 		    </div>
 		    <div class="col-xs-12 col-sm-6 col-md-6 pd-none">
 		    	<form class="form-search" action="calhas.php" method="get" name="search">
-		    		<input class="busca" type="search" name="busca" value="{$postBusca}" placeholder="Pesquisar...">
+		    		<input class="busca" type="search" name="busca" value="{$postBusca}" placeholder="Digite o modelo...">
 		    		<input class="buscar" type="submit" value="">
 		    	</form>
 		    </div>
