--- a/commom/templates/calhas.html
+++ b/commom/templates/calhas.html
@@ -50,7 +50,7 @@
                                         {else}
                                             <img src="commom/img/sem-foto.jpg" title="{$dados[i].descricao}" alt="{$dados[i].descricao}">
                                         {/if}
-                                        <p class="txt-produto-home">{$dados[i].descricao}</p>
+                                        <p class="txt-produto-home txt-produto-titulo titulo-valor-busca">{$dados[i].descricao}</p>
                                         <a href="calha.php?id={$dados[i].id}" class="btn-default" title="Saiba mais {$dados[i].descricao}">
                                             <img src="commom/img/icon-mais.png" alt="icone mais" title="icone mais">
                                             saiba mais
