--- a/commom/templates/fale-conosco.html
+++ b/commom/templates/fale-conosco.html
@@ -7,9 +7,9 @@
     <title>Entre em contato conosco!</title>
     <meta name="robots" content="index, follow">
     <meta name="description" content="Empresa de calhas de chuva automotivas. Solicite um orçamento." />
-    <link href="commom/img/icon-tab.png" rel="icon">
-    <link href="commom/css/bootstrap.min.css" rel="stylesheet">
-    <link href="commom/css/estilo.css" rel="stylesheet">
+    <link href="{$URL}commom/img/icon-tab.png" rel="icon">
+    <link href="{$URL}commom/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{$URL}commom/css/estilo.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -21,7 +21,7 @@
     <div class="container-fluid pd-none">
         {include file="inc/header.html"}
         <div class="row hidden-xs">
-            <img class="img-banner-interna" src="commom/img/banner-fale-conosco.jpg" alt="fale conosco" title="fale conosco">
+            <img class="img-banner-interna" src="{$URL}commom/img/banner-fale-conosco.jpg" alt="fale conosco" title="fale conosco">
             <h2 class="titulo-interna">fale conosco</h2>
         </div>
         {include file="inc/bradcrumb.html"}
@@ -37,7 +37,7 @@
                         <p class="titulo-rodape">Atendimento:</p>
                         <ul>
                             <li class="linha-rodape"><a class="link-rodape" href="tel:01140430356">(11) 40430356</a></li>
-                            <li class="linha-rodape"><a class="link-rodape" href="mailto:contato@ecoflexautomotive.com.br">contato@ecoflexautomotive.com.br</a></li>
+                            <li class="linha-rodape"><a class="link-rodape" href="mailto:ecoflexautomotive@uol.com.br">ecoflexautomotive@uol.com.br</a></li>
                             <li class="linha-rodape">Seg a Sáb das 9:00 às 18:30hs.</li>
                         </ul>
                     </div>
