--- a/commom/templates/inc/header.html
+++ b/commom/templates/inc/header.html
@@ -10,11 +10,11 @@
 		                <span class="icon-bar"></span>
 		                <span class="icon-bar"></span>
 		            </button>
-		            <img class="busca-mobile" src="commom/img/lupa.png" alt="busca" title="busca">
-		            <a class="navbar-brand" href="index.php"> <img src="commom/img/logo.jpg" alt="EcoFlex automotive" title="EcoFlex automotive"> </a>
+		            <img class="busca-mobile" src="{$URL}commom/img/lupa.png" alt="busca" title="busca">
+		            <a class="navbar-brand" href="{$URL}home"> <img src="{$URL}commom/img/logo.jpg" alt="EcoFlex automotive" title="EcoFlex automotive"> </a>
 	            </div>
 	            <div class="col-xs-12 search-mobile">
-			    	<form class="form-search" action="calhas.php" method="get" name="search">
+			    	<form class="form-search" action="{$URL}calhas" method="get" name="search">
 			    		<input autocomplete="off" id="buscaValorMobile" class="busca" type="search" name="busca" value="{$postBusca}" placeholder="Digite o modelo...">
 			    		<div  id="carrega-busca-mobile" class="carrega-busca"></div>
 			    		<input class="buscar" type="submit" value="">
@@ -22,14 +22,14 @@
 			    </div>
 	            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	             	<ul class="nav navbar-nav">
-		                <li class="linha-menu"><a class="link-menu {if $pagina == 'index.php'} link-menu-ativo {/if}" href="index.php">Home</a></li>
+		                <li class="linha-menu"><a class="link-menu {if $pagina == '' || $pagina == 'home'} link-menu-ativo {/if}" href="{$URL}home">Home</a></li>
 		                <li class="divisao-menu hidden-xs">|</li>
-		                <li class="linha-menu"><a class="link-menu {if $pagina == 'quem-somos.php'} link-menu-ativo {/if}" href="quem-somos.php">Quem somos</a></li>
+		                <li class="linha-menu"><a class="link-menu {if $pagina == 'quem-somos'} link-menu-ativo {/if}" href="{$URL}quem-somos">Quem somos</a></li>
 		                <li class="divisao-menu hidden-xs">|</li>
-		                <li class="linha-menu"><a class="link-menu {if $pagina == 'localizacao.php'} link-menu-ativo {/if}" href="localizacao.php">Localização</a></li>
+		                <li class="linha-menu"><a class="link-menu {if $pagina == 'localizacao'} link-menu-ativo {/if}" href="{$URL}localizacao">Localização</a></li>
 		                <li class="divisao-menu hidden-xs">|</li>
-		                <li class="linha-menu"><a class="link-menu {if $pagina == 'fale-conosco.php'} link-menu-ativo {/if}" href="fale-conosco.php">Fale Conosco</a></li>  
-		                <li class="linha-menu visible-xs-block {if $pagina == 'calhas.php'} link-menu-ativo {/if}"><a class="link-menu" href="calhas.php">Calhas Automotivas</a></li>  
+		                <li class="linha-menu"><a class="link-menu {if $pagina == 'fale-conosco'} link-menu-ativo {/if}" href="{$URL}fale-conosco">Fale Conosco</a></li>  
+		                <li class="linha-menu visible-xs-block {if $pagina == 'calhas'} link-menu-ativo {/if}"><a class="link-menu" href="{$URL}calhas">Calhas Automotivas</a></li>  
 		                <!-- <li class="linha-menu visible-xs-block dropdown">
 		                	<a class="link-menu dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="">Marcas</a>
 			                <ul class="dropdown-menu">
@@ -50,16 +50,16 @@
 	</nav>
 	<div class="bloco-contato-topo">
     	<div class="col-sm-3 col-md-5">
-			<a class="link-logo hidden-xs" href="index.php"> <img src="commom/img/logo.jpg" alt="EcoFlex automotive" title="EcoFlex automotive"> </a>
+			<a class="link-logo hidden-xs" href="{$URL}home"> <img src="{$URL}commom/img/logo.png" alt="EcoFlex automotive" title="EcoFlex automotive"> </a>
     	</div>
 		<div class="encapsula-contato-topo pd-none">
 	    	<div class="col-xs-12 col-sm-2 col-md-2 bloco-tel-topo pd-none">
-				<img class="icon-contato-topo" src="commom/img/icon-tel.png" alt="Icone telefone" title="Icone telefone">
+				<img class="icon-contato-topo" src="{$URL}commom/img/icon-tel.png" alt="Icone telefone" title="Icone telefone">
 				<a href="tel:01140430356" class="link-contato-topo" title="11  40430356">11  40430356</a>
 	    	</div> 
 	    	<div class="col-xs-12 col-sm-3 col-md-3 bloco-email-topo pd-none">
-				<img class="icon-contato-topo" src="commom/img/icon-email.png" alt="Icone telefone" title="Icone telefone">
-				<a href="mailto:contato@ecoflexautomotive.com.br" class="link-contato-topo" title="contato@ecoflexautomotive.com.br">contato@ecoflexautomotive.com.br</a>
+				<img class="icon-contato-topo" src="{$URL}commom/img/icon-email.png" alt="Icone telefone" title="Icone telefone">
+				<a href="mailto:ecoflexautomotive@uol.com.br" class="link-contato-topo" title="ecoflexautomotive@uol.com.br">ecoflexautomotive@uol.com.br</a>
 	    	</div>
 	    	<!-- <div class="col-xs-12 col-sm-2 col-md-2 bloco-local-topo pd-none hidden-xs">
 	    		<img class="icon-contato-topo" src="commom/img/icon-local.png" alt="Icone telefone" title="Icone telefone">
@@ -72,7 +72,7 @@
 	    	<div class="col-xs-12 col-sm-6 col-md-6 pd-none">
 		    	<nav class="nav-linha-baixo-topo">
 		    		<ul>
-		    			<li class="linha-menu-baixo-topo {if $pagina == 'calhas.php'} linha-menu-baixo-topo-ativo {/if}"><a class="link-baixo-topo" href="calhas.php">CALHAS AUTOMOTIVAS</a></li>
+		    			<li class="linha-menu-baixo-topo {if $pagina == 'calhas'} linha-menu-baixo-topo-ativo {/if}"><a class="link-baixo-topo" href="{$URL}calhas">CALHAS AUTOMOTIVAS</a></li>
 		    			<li class="linha-menu-baixo-topo">
 		    				<a class="link-baixo-topo" href="">MARCAS</a>
 		    				<ul class="drop-down">
@@ -80,7 +80,7 @@
 		    						{assign var="nmTipo" value=$nmTipo|default:""}
 									{section name=i loop=$menuLateral}
 										{if $nmTipo <> $menuLateral[i].marca}
-											<li class="linha-drop"><a class="link-drop" href="calhas.php?idMarca={$menuLateral[i].idMarca}">{$menuLateral[i].marca}</a></li>
+											<li class="linha-drop"><a class="link-drop" href="{$URL}calhas/{$menuLateral[i].urlAmigavel}">{$menuLateral[i].marca}</a></li>
 										{/if}
 										{assign var="nmTipo" value=$menuLateral[i].marca}
 									{/section}
@@ -91,7 +91,7 @@
 		    	</nav>
 		    </div>
 		    <div class="col-xs-12 col-sm-6 col-md-6 pd-none">
-		    	<form class="form-search" action="calhas.php" method="get" name="search">
+		    	<form class="form-search" action="{$URL}calhas" method="get" name="search">
 		    		<input class="busca" id="buscaValor" type="search" name="busca" value="{$postBusca}" autocomplete="off" placeholder="Digite o modelo...">
 		    		<div  id="carrega-busca" class="carrega-busca"></div>
 		    		<input class="buscar" type="submit" value="">
