--- a/commom/templates/localizacao.html
+++ b/commom/templates/localizacao.html
@@ -7,9 +7,9 @@
     <title>Faça-nos uma Visita!</title>
     <meta name="robots" content="index, follow">
     <meta name="description" content="Faça-nos uma visita ou entre em contato conosco." />
-    <link href="commom/img/icon-tab.png" rel="icon">
-    <link href="commom/css/bootstrap.min.css" rel="stylesheet">
-    <link href="commom/css/estilo.css" rel="stylesheet">
+    <link href="{$URL}commom/img/icon-tab.png" rel="icon">
+    <link href="{$URL}commom/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{$URL}commom/css/estilo.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -21,7 +21,7 @@
     <div class="container-fluid pd-none">
         {include file="inc/header.html"}
         <div class="row hidden-xs">
-            <img class="img-banner-interna" src="commom/img/banner-fale-conosco.jpg" alt="Localização" title="Localização">
+            <img class="img-banner-interna" src="{$URL}commom/img/banner-fale-conosco.jpg" alt="Localização" title="Localização">
             <h2 class="titulo-interna">localização</h2>
         </div>
         {include file="inc/bradcrumb.html"}
