--- a/commom/templates/calha.html
+++ b/commom/templates/calha.html
@@ -7,11 +7,11 @@
     <title>{$dados[0].tituloMarca} - {$dados[0].descricao}</title>
     <meta name="robots" content="index, follow">
     <meta name="description" content="{$dados[0].descricao}" />
-    <link href="commom/img/icon-tab.png" rel="icon">
-    <link href="commom/css/bootstrap.min.css" rel="stylesheet">
-    <link href="commom/css/estilo.css" rel="stylesheet">
+    <link href="{$URL}commom/img/icon-tab.png" rel="icon">
+    <link href="{$URL}commom/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{$URL}commom/css/estilo.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="commom/js/lightbox.js"></script>
+    <script src="{$URL}commom/js/lightbox.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -23,7 +23,7 @@
     <div class="container-fluid pd-none">
         {include file="inc/header.html"}
         <div class="row hidden-xs">
-            <img class="img-banner-interna" src="commom/img/banner-produto.jpg" alt="calhas automotivas" title="calhas automotivas">
+            <img class="img-banner-interna" src="{$URL}commom/img/banner-produto.jpg" alt="calhas automotivas" title="calhas automotivas">
             <h2 class="titulo-interna">calhas automotivas</h2>
         </div>
         {include file="inc/bradcrumb.html"}
@@ -40,8 +40,8 @@
                                 <div class="mtlsr-images-for-lightbox">
                                     <ul>
                                         <li>
-                                            <a href="{$dados[0].caminhoImagem}"></a>
-                                            <img src="{$dados[0].caminhoImagem}" title="{$dados[0].descricao}" alt="{$dados[0].descricao}">
+                                            <a href="{$URL}{$dados[0].caminhoImagem}"></a>
+                                            <img src="{$URL}{$dados[0].caminhoImagem}" title="{$dados[0].descricao}" alt="{$dados[0].descricao}">
                                         </li>
                                     </ul>
                                 </div>
@@ -49,24 +49,24 @@
                                     <a href="#" class="close">&#9421;</a>
                                 </div>
                             {else}
-                                <img src="commom/img/sem-foto.jpg" title="{$dados[0].descricao}" alt="{$dados[0].descricao}">
+                                <img src="{$URL}commom/img/sem-foto.jpg" title="{$dados[0].descricao}" alt="{$dados[0].descricao}">
                             {/if}
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-8 pd-none encapsula-desc-produto">
                             <h1 class="titulo-produto">{$dados[0].descricao}</h1>
                             <div class="col-xs-12 col-sm-7 col-md-7 pd-none">
                                 <div class="row bloco-desc-ind">
-                                    <img class="icon-desc-produto pull-left" src="commom/img/icon-cod.png" alt="icone" title="icone">
+                                    <img class="icon-desc-produto pull-left" src="{$URL}commom/img/icon-cod.png" alt="icone" title="icone">
                                     <p class="txt-detalhe-produto"><strong>Código do produto</strong></p>
                                     <p class="txt-detalhe-produto">{$dados[0].codigo}</p>
                                 </div>  
                                 <div class="row bloco-desc-ind">
-                                    <img class="icon-desc-produto pull-left" src="commom/img/icon-portas.png" alt="icone" title="icone">
+                                    <img class="icon-desc-produto pull-left" src="{$URL}commom/img/icon-portas.png" alt="icone" title="icone">
                                     <p class="txt-detalhe-produto"><strong>Portas</strong></p>
                                     <p class="txt-detalhe-produto">{$dados[0].porta}</p>
                                 </div>  
                                 <div class="row bloco-desc-ind">
-                                    <img class="icon-desc-produto pull-left" src="commom/img/icon-modelo.png" alt="icone" title="icone">
+                                    <img class="icon-desc-produto pull-left" src="{$URL}commom/img/icon-modelo.png" alt="icone" title="icone">
                                     <p class="txt-detalhe-produto"><strong>Modelo</strong></p>
                                     <ul>
                                         {section name=i loop=$dados}
@@ -77,20 +77,20 @@
                             </div>  
                             <div class="col-xs-12 col-sm-5 col-md-5 pd-none">  
                                 <div class="row bloco-desc-ind">
-                                    <img class="icon-desc-produto pull-left" src="commom/img/icon-marca.png" alt="icone" title="icone">
+                                    <img class="icon-desc-produto pull-left" src="{$URL}commom/img/icon-marca.png" alt="icone" title="icone">
                                     <p class="txt-detalhe-produto"><strong>Marca</strong></p>
-                                    <p class="txt-detalhe-produto"><img class="icon-img-desc" src="{$dados[0].imgMarca}" alt="{$dados[0].tituloMarca}" title="{$dados[0].tituloMarca}"></p>
+                                    <p class="txt-detalhe-produto"><img class="icon-img-desc" src="{$URL}{$dados[0].imgMarca}" alt="{$dados[0].tituloMarca}" title="{$dados[0].tituloMarca}"></p>
                                 </div>  
                                 <div class="row bloco-desc-ind">
-                                    <img class="icon-desc-produto pull-left" src="commom/img/icon-material.png" alt="icone" title="icone">
+                                    <img class="icon-desc-produto pull-left" src="{$URL}commom/img/icon-material.png" alt="icone" title="icone">
                                     <p class="txt-detalhe-produto"><strong>Material</strong></p>
                                     <p class="txt-detalhe-produto">100% Acrílico</p>
                                 </div>  
                                 {if $dados[0].qualidade}
                                     <div class="row bloco-desc-ind">
-                                        <img class="icon-desc-produto pull-left" src="commom/img/icon-qualidade.png" alt="icone" title="icone">
+                                        <img class="icon-desc-produto pull-left" src="{$URL}commom/img/icon-qualidade.png" alt="icone" title="icone">
                                         <p class="txt-detalhe-produto"><strong>Qualidade</strong></p>
-                                        <p class="txt-detalhe-produto"><img src="commom/img/3m.png" alt="3M" title="3M"></p>
+                                        <p class="txt-detalhe-produto"><img src="{$URL}commom/img/3m.png" alt="3M" title="3M"></p>
                                     </div> 
                                 {/if} 
                             </div>
@@ -117,13 +117,13 @@
                                 {/if}
                                 <div class="bloco-produto-home">
                                     {if $RetornoDestaque[i].caminhoImagem}
-                                        <img src="{$RetornoDestaque[i].caminhoImagem}" title="{$RetornoDestaque[i].descricao}" alt="{$RetornoDestaque[i].descricao}">
+                                        <img src="{$URL}{$RetornoDestaque[i].caminhoImagem}" title="{$RetornoDestaque[i].descricao}" alt="{$RetornoDestaque[i].descricao}">
                                     {else}
-                                        <img src="commom/img/sem-foto.jpg" title="{$RetornoDestaque[i].descricao}" alt="{$RetornoDestaque[i].descricao}">
+                                        <img src="{$URL}commom/img/sem-foto.jpg" title="{$RetornoDestaque[i].descricao}" alt="{$RetornoDestaque[i].descricao}">
                                     {/if}
                                     <p class="txt-produto-home">{$RetornoDestaque[i].descricao}</p>
-                                    <a href="calha.php?id={$RetornoDestaque[i].id}" class="btn-default" alt="Saiba mais sobre {$RetornoDestaque[i].descricao}" title="Saiba mais sobre {$RetornoDestaque[i].descricao}">
-                                        <img src="commom/img/icon-mais.png" alt="icone mais" title="icone mais">
+                                    <a href="{$URL}calha/{$RetornoDestaque[i].urlAmigavelMarca}/{$RetornoDestaque[i].urlAmigavel}" class="btn-default" alt="Saiba mais sobre {$RetornoDestaque[i].descricao}" title="Saiba mais sobre {$RetornoDestaque[i].descricao}">
+                                        <img src="{$URL}commom/img/icon-mais.png" alt="icone mais" title="icone mais">
                                         saiba mais
                                     </a>
                                 </div>
