--- a/commom/templates/inc/menu-produtos.html
+++ b/commom/templates/inc/menu-produtos.html
@@ -8,12 +8,13 @@
                     </ul>
                 </li>
                 <li class="linha-menu-produto menu-produto-icon">
-                        <img class="img-marca-lateral" src="{$menuLateral[i].caminhoImagem}" alt="{$menuLateral[i].marca}" title="{$menuLateral[i].marca}">
-                        <a class="link-menu-produto" href="calhas.php?idMarca={$menuLateral[i].idMarca}">{$menuLateral[i].marca} {$LateralModeAtivo}</a>
-                    <ul class="submenu-produto-lateral" {if $menuLateral[i].idMarca ==  $smarty.get.idMarca || $menuLateral[i].idMarca ==  $LateralModeAtivo} style="display:block" {/if}>
+                        <img class="img-marca-lateral" src="{$URL}{$menuLateral[i].caminhoImagem}" alt="{$menuLateral[i].marca}" title="{$menuLateral[i].marca}">
+                        <a class="link-menu-produto" href="{$URL}calhas/{$menuLateral[i].urlAmigavel}">{$menuLateral[i].marca}</a>
+                        
+                    <ul class="submenu-produto-lateral" {if $menuLateral[i].urlAmigavel ==  $idMarca || $menuLateral[i].urlAmigavel ==  $LateralModeAtivo} style="display:block" {/if}>
                     {/if}
                     <li class="linha-submenu-produto">
-                        <a class="link-submenu-produto" href="calhas.php?idMod={$menuLateral[i].idModelo}">{$menuLateral[i].modelo}</a>
+                        <a class="link-submenu-produto" href="{$URL}calhas/{$url[1]}/{$menuLateral[i].urlAmigavelmod}">{$menuLateral[i].modelo}</a>
                     </li>
             {assign var="nmTipo" value=$menuLateral[i].marca}
             {/section}
