--- a/commom/templates/obrigado-produto.html
+++ b/commom/templates/obrigado-produto.html
@@ -38,7 +38,7 @@
                         <p class="titulo-rodape">Atendimento:</p>
                         <ul>
                             <li class="linha-rodape"><a class="link-rodape" href="tel:1100000000 ">(11) 0000-0000</a></li>
-                            <li class="linha-rodape"><a class="link-rodape" href="mailto:contato@ecoflexautomotive.com.br">contato@ecoflexautomotive.com.br</a></li>
+                            <li class="linha-rodape"><a class="link-rodape" href="mailto:ecoflexautomotive@uol.com.br">ecoflexautomotive@uol.com.br</a></li>
                             <li class="linha-rodape">Seg a Sáb das 9:00 às 18:30hs.</li>
                         </ul>
                     </div>
