--- a/commom/templates/quem-somos.html
+++ b/commom/templates/quem-somos.html
@@ -7,9 +7,9 @@
     <title>Empresa especialista em calha de chuva automotiva.</title>
     <meta name="robots" content="index, follow">
     <meta name="description" content="Empresa que comercializa calha de chuva automotiva." />
-    <link href="commom/img/icon-tab.png" rel="icon">
-    <link href="commom/css/bootstrap.min.css" rel="stylesheet">
-    <link href="commom/css/estilo.css" rel="stylesheet">
+    <link href="{$URL}commom/img/icon-tab.png" rel="icon">
+    <link href="{$URL}commom/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{$URL}commom/css/estilo.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -21,7 +21,7 @@
     <div class="container-fluid pd-none">
         {include file="inc/header.html"}
         <div class="row hidden-xs">
-            <img class="img-banner-interna" src="commom/img/banner-quem-somos.jpg" alt="quem somos" title="quem somos">
+            <img class="img-banner-interna" src="{$URL}commom/img/banner-quem-somos.jpg" alt="quem somos" title="quem somos">
             <h2 class="titulo-interna">quem somos</h2>
         </div>
         {include file="inc/bradcrumb.html"}
@@ -32,7 +32,7 @@
                     <!-- <h2 class="txt-interna"><strong>Missão</strong></h2> -->
                     <p class="txt-interna">Somos uma empresa que comercializa calhas de chuva automotiva para as mais diversas marcas de automóveis.</p><br>
                     
-                    <p class="txt-interna">Oferecemos serviços de qualidade atendendo aos nossos clientes com perfeição e comercializar produtos de qualidade nos comprometendo com a satisfação do cliente.</p><br>
+                    <p class="txt-interna">Oferecemos serviços de qualidade atendendo aos nossos clientes com perfeição e comercializando produtos de qualidade, sempre nos comprometendo com a satisfação do cliente. <br><br>Atendimento: Seg a Sexta das 08:00 às 18:00hrs</p><br>
                 </div>  
                 <div class="col-xs-12 col-sm-5 col-md-5">  
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3653.4189813192834!2d-46.61176578501967!3d-23.696727484615845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce446132a2c075%3A0x6f9c2f8eacaa7f72!2sR.+%C3%81lvares+Cabral%2C+477+-+Concei%C3%A7%C3%A3o%2C+Diadema+-+SP%2C+09981-030!5e0!3m2!1spt-BR!2sbr!4v1445620710856" allowfullscreen style="max-width: 100%;"></iframe><br><br>
