Parte de url dos produtos feita, falta so a paginacao e busca

--- a/commom/templates/calha.html
+++ b/commom/templates/calha.html
@@ -122,7 +122,7 @@
                                         <img src="{$URL}commom/img/sem-foto.jpg" title="{$RetornoDestaque[i].descricao}" alt="{$RetornoDestaque[i].descricao}">
                                     {/if}
                                     <p class="txt-produto-home">{$RetornoDestaque[i].descricao}</p>
-                                    <a href="{$URL}calha/{$RetornoDestaque[i].urlAmigavelMarca}/{$RetornoDestaque[i].urlAmigavel}" class="btn-default" alt="Saiba mais sobre {$RetornoDestaque[i].descricao}" title="Saiba mais sobre {$RetornoDestaque[i].descricao}">
+                                    <a href="{$URL}calha/{$RetornoDestaque[i].urlAmigavelMarca}/{$RetornoDestaque[i].urlAmigavelModelo}/{$RetornoDestaque[i].urlAmigavel}" class="btn-default" alt="Saiba mais sobre {$RetornoDestaque[i].descricao}" title="Saiba mais sobre {$RetornoDestaque[i].descricao}">
                                         <img src="{$URL}commom/img/icon-mais.png" alt="icone mais" title="icone mais">
                                         saiba mais
                                     </a>
