--- a/commom/templates/index.html
+++ b/commom/templates/index.html
@@ -70,7 +70,7 @@
                                 <img src="{$URL}commom/img/sem-foto.jpg" title="{$RetornoDestaque[i].descricao}" alt="{$RetornoDestaque[i].descricao}">
                             {/if}
                             <p class="txt-produto-home">{$RetornoDestaque[i].descricao}</p>
-                            <a href="{$URL}calha/{$RetornoDestaque[i].urlAmigavel}" class="btn-default" title="Saiba mais sobre {$RetornoDestaque[i].descricao}">
+                            <a href="{$URL}calha/{$RetornoDestaque[i].urlAmigavelMarca}/{$RetornoDestaque[i].urlAmigavelModelo}/{$RetornoDestaque[i].urlAmigavel}" class="btn-default" title="Saiba mais sobre {$RetornoDestaque[i].descricao}">
                                 <img src="{$URL}commom/img/icon-mais.png" alt="icone mais" title="icone mais">
                                 saiba mais
                             </a>
